tests/grammars/reject/mutual-recursion.aug
grammar {
  token EOL '\n'
  
  start: 'a' v EOL

  v: w
  w: v
}
